--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
 	border-style: solid;
 	border-color: 	#F0F8FF;
 	padding: 0 1em 0 1em;
-=======
+}
 /* add your CSS here */
 body {
 	background-image: url("images/598770.jpg");
